# nbn

./: .gitignore  .gitmodules  Cargo.toml  README.md  build.ninja  compile_shaders.sh  flake.nix  gltf.slang  shader.slang  shader.spv  triangle.slang  triangle.spv
alias-table/: Cargo.toml
alias-table/src/: lib.rs
cpp/: CMakeLists.txt  allocator.cpp  command_buffer.h  core.h  descriptors.cpp  descriptors.h  device.cpp  device.h  main.cpp  nbn.cpp  nbn.h  pch.h  util.cpp
cpp/examples/: compute.cpp
examples/: compute.rs  cube.rs  egui.rs  hdr_calibration.rs  lightmapper.rs  ntc.rs  rt.rs  test.rs  thief.rs  window.rs
gltf-compress/: Cargo.toml
gltf-meshlets/: Cargo.toml
gltf-meshlets/src/: main.rs
jungle/: Cargo.toml
jungle/src/: main.rs
lightmapper/: Cargo.toml
lightmapper/src/: main.rs
meshlet-renderer/: Cargo.toml
meshlet-renderer/src/: assets.rs  main.rs  rendering.rs
nix/: shady.patch
particles/: Cargo.toml
particles/src/: main.rs
projects/jungle/: Cargo.toml
projects/jungle/src/: main.rs
projects/lightmapper/: Cargo.toml
projects/lightmapper/src/: least_squares.rs  main.rs
projects/meshlet-renderer/: Cargo.toml
projects/meshlet-renderer/src/: assets.rs  main.rs
projects/ntc/: Cargo.toml
projects/ntc/src/: main.rs  viewer.rs  writer.rs
projects/particles/: Cargo.toml
projects/particles/src/: main.rs
projects/voxelizer/: Cargo.toml
shaders/: common.slang  compute.slang  compute_ex.slang  compute_ex_structs.slang  compute_example.slang  cube.slang  culling.slang  debugging.slang  dispatches.slang  egui.slang  fallback_bindings.slang  ffx_shadows.slang  gltf.slang  gltf_raster.slang  lightmapper.slang  lightmapper_structs.slang  mesh_shaders.slang  models.slang  onesweep.slang  particles.slang  particles_structs.slang  prefix_sum.slang  raytracing.slang  resolve_visbuffer.slang  rt_triangle.slang  shadow_denoising.slang  shadows.slang  sort.slang  thief.slang  thief_models.slang  thief_structs.slang  triangle.slang  triangle_hdr.slang  uniforms.slang  visbuffer.slang  voxelize.slang
shaders/compiled/: compute.spv  compute_ex.spv  compute_example.spv  debugging.spv  egui.spv  jungle.spv  lightmapper.spv  mesh_shaders.spv  ntc.spv  particles.spv  radixsort.spv  resolve_visbuffer.spv  rt_triangle.spv  shadow_denoising.spv  shadows.spv  thief.spv  triangle.spv  triangle_hdr.spv  voxelize.spv
shaders/examples/: compute_example.slang  rt_triangle.slang  triangle_hdr.slang
shaders/jungle/: jungle.slang  structs.slang
shaders/lightmapper/: lightmapper.slang  structs.slang
shaders/meshlet_renderer/: compute.slang  dispatches.slang  mesh_shaders.slang  models.slang  raytracing.slang  resolve_visbuffer.slang  shadow_denoising.slang  uniforms.slang
shaders/ntc/: adam.slang  ntc.slang  structs.slang
shaders/particles/: particles.slang  structs.slang
shaders/shared/: adam.slang  barycentrics.slang  colour.slang  constants.slang  culling.slang  derivatives.slang  envmap.slang  filters.slang  hdr10.slang  image_sampling.slang  importance_sampling.slang  linalg.slang  noise.slang  prefix_sum.slang  random.slang  restir.slang  sampling.slang  sampling_old.slang  sobol.slang  structs.slang  subops.slang  util.slang
src/: blue_noise.rs  descriptors.rs  egui.rs  freecam.rs  hot_reloading.rs  image_loading.rs  lib.rs  surface.rs  util.rs
tools/: blender_export_instances.py
tools/gltf-compress/src/: main.rs
tools/gltf-copy-materials/: Cargo.toml
tools/gltf-copy-materials/src/: main.rs
tools/gltf-meshlets/: Cargo.toml
tools/gltf-meshlets/src/: main.rs
voxelizer/: Cargo.toml  test.rs
voxelizer/src/: main.rs
