[package]
name = "nbn"
version = "0.1.0"
edition = "2021"

[dependencies]
ash = { version = "0.38.0", features = ["linked"] }
ash-window = "0.13.0"
gpu-allocator = {git = "https://github.com/expenses/gpu-allocator", branch = "updates", features = ["vulkan"]}
log = "0.4.28"
parking_lot = "0.12.5"
winit = "0.30.12"
presser = "0.3.1"
notify = "8.2.0"
glam = "0.30.8"
egui = { version = "0.31.1", optional = true }
ddsfile = { version = "0.5.2", optional = true }
ktx2 = { version = "0.4.0", optional = true }
zstd = { version = "0.13.3", optional = true }
bitflags = "2.10.0"

[dev-dependencies]
goth-gltf = { path = "../goth-gltf", features = [
    "primitive_reader",
] }
env_logger = "0.11.8"
gpu-allocator = {git = "https://github.com/expenses/gpu-allocator", branch = "updates", features = ["visualizer"]}
egui-winit = "0.31.1"
image = { version = "0.25.8", default-features = false, features = ["exr"] }

[features]
default = ["image_loading", "egui"]
image_loading = ["dep:zstd", "dep:ktx2", "dep:ddsfile"]
egui = ["dep:egui"]

[workspace]
members = [".", "gltf-compress", "gltf-meshlets", "meshlet-renderer", "voxelizer"]
