[package]
name = "nbn"
version = "0.1.0"
edition = "2021"

[dependencies]
ash = { version = "0.38.0", features = ["linked"] }
ash-window = "0.13.0"
gpu-allocator = {git = "https://github.com/expenses/gpu-allocator", branch = "updates", features = ["vulkan"]}
log = "0.4.29"
parking_lot = "0.12.5"
winit = "0.30.12"
presser = "0.3.1"
notify = "8.2.0"
glam = "0.31.1"
egui = { version = "0.31.1", optional = true }
ddsfile = { version = "0.5.2", optional = true }
ktx2 = { version = "0.4.0", optional = true }
zstd = { version = "0.13.3", optional = true }
bitflags = "2.10.0"
blue-noise-sampler = { version = "0.1.0", optional = true }
dolly = { version = "0.6.0", optional = true }
image = { version = "0.25.9", default-features = false, features = ["exr"] }

[dev-dependencies]
goth-gltf = { git = "https://github.com/expenses/goth-gltf", features = [
    "names",
] }
env_logger = "0.11.9"
gpu-allocator = {git = "https://github.com/expenses/gpu-allocator", branch = "updates", features = ["visualizer"]}
egui-winit = "0.31.1"
image = { version = "0.25.9", default-features = false, features = ["exr"] }
slang_struct = { git = "https://github.com/expenses/slang-struct-rs", branch = "logos" }

[features]
default = ["image_loading", "egui"]
image_loading = ["dep:zstd", "dep:ktx2", "dep:ddsfile"]
egui = ["dep:egui"]
blue_noise = ["dep:blue-noise-sampler"]
freecam = ["dep:dolly"]

[workspace]
members = [".", "gltf-compress", "gltf-meshlets", "meshlet-renderer", "voxelizer"]
