[package]
name = "gltf-compress"
version = "0.1.0"
edition = "2024"

[dependencies]
goth-gltf = { git = "https://github.com/expenses/goth-gltf", version = "0.1.1" }
image = "0.25.9"
intel_tex_2 = "0.5.0"
ktx2 = "0.4.0"
ktx2-tools = { git = "https://github.com/expenses/ktx2-tools", version = "0.1.0" }
rayon = "1.11.0"
structopt = "0.3.26"
