[package]
name = "lightmapper"
version = "0.1.0"
edition = "2024"

[dependencies]
nbn = {path = "..", features = ["freecam"]}
nalgebra = "0.34.1"
nalgebra-sparse = "0.11.0"
clap = { version = "4.5.59", features = ["derive"] }
ordered-float = "5.1.0"
alias-table = {path = "../alias-table"}
goth-gltf = { git = "https://github.com/expenses/goth-gltf", features = [
    "names",
] }
image = { version = "0.25.9", default-features = false, features = ["exr", "png"] }
env_logger = "0.11.9"
winit = "0.30.13"
glam = "0.32.0"
slang_struct = { git = "https://github.com/expenses/slang-struct-rs", branch = "logos" }
oidn = "2.3.3"
