[package]
name = "meshlet-renderer"
version = "0.1.0"
edition = "2024"

[dependencies]
nbn = {path = ".."}
goth-gltf = { git = "https://github.com/expenses/goth-gltf", features = [
    "names",
] }
env_logger = "0.11.9"
glam = "0.31.1"
slang_struct = { git = "https://github.com/expenses/slang-struct-rs", branch = "logos" }
ddsfile = "0.5.2"
ktx2 = "0.4.0"
zstd = "0.13.3"
winit = "0.30.12"
dolly = "0.6.0"
egui = "0.33.3"
anyhow = "1.0.101"
gpu-allocator = {git = "https://github.com/expenses/gpu-allocator", branch = "updates", features = ["visualizer"]}
egui-winit = "0.33.3"
blue-noise-sampler = "0.1.0"
