[package]
name = "voxelizer"
version = "0.1.0"
edition = "2024"

[dependencies]
bytemuck = "1.24.0"
ddsfile = "0.5.2"
env_logger = "0.11.8"
glam = "0.29"
goth-gltf = "0.1.2"
image = "0.25.9"
indicatif = "0.18.3"
nbn = { version = "0.1.0", path = ".." }
radsort = "0.1.1"
rayon = "1.11.0"
slang_struct = { git = "https://github.com/expenses/slang-struct-rs", branch = "logos" }
tree64 = { version = "0.1.0", features = ["caching"] }
