[package]
name = "jungle"
version = "0.1.0"
edition = "2024"

[dependencies]
nbn = {path = "../..", features = ["freecam"]}
nrd = { git = "https://github.com/expenses/nrd-rs" }
goth-gltf = { version = "0.3.0", features = ["names"] }
slang_struct = { git = "https://github.com/expenses/slang-struct-rs", branch = "logos" }
ddsfile = "0.6.0"
ndarray-npy = "0.10.0"
ndarray = "0.17.2"
image = { version = "0.25.10", features = ["exr"] }
alias-table = {path = "../../alias-table"}
