[package]
name = "ntc"
version = "0.1.0"
edition = "2024"

[dependencies]
image = { version = "0.25.10", default-features = false, features = ["exr"] }
nbn = { version = "0.1.0", path = "../.." }
ndarray-npy = "0.10.0"
ndarray = "0.17.2"
rand = "0.10.1"
slang_struct = { git = "https://github.com/expenses/slang-struct-rs", branch = "logos" }
