[package]
name = "ntc"
version = "0.1.0"
edition = "2024"

[dependencies]
image = { version = "0.25.10", default-features = false, features = ["exr", "jpeg", "png"] }
nbn = { version = "0.1.0", path = "../.." }
rand = "0.10.1"
slang_struct = { git = "https://github.com/expenses/slang-struct-rs", branch = "logos" }
clap = { version = "4.6.1", features = ["derive"] }
half = "2.7.1"
tensorboard-rs = "0.5.9"
egui-winit = "0.31.1"
